--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,28 @@ numpy==1.24.4
 torch==2.4.0
 torchvision==0.19.0
 opencv-python==4.10.0.84
+albumentations==0.4.3
+diffusers
+pudb==2019.2
+invisible-watermark
+imageio==2.9.0
+imageio-ffmpeg==0.4.2
+pytorch-lightning==1.4.2
+omegaconf==2.3.0
+test-tube>=0.7.5
+streamlit>=0.73.1
+einops==0.3.0
+torch-fidelity==0.3.0
+transformers
+torchmetrics==0.6.0
+kornia==0.6
+gradio
+wandb
+hydra-core==1.3.2
+colorama==0.4.6
+accelerate==1.0.1
+-e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers
+-e git+https://github.com/openai/CLIP.git@main#egg=clip
+advertorch@git+https://github.com/BorealisAI/advertorch.git
 segment_anything @ git+https://github.com/facebookresearch/segment-anything.git@dca509fe793f601edb92606367a655c15ac00fdf
 
