--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ wandb
 hydra-core==1.3.2
 colorama==0.4.6
 accelerate==1.0.1
+ultralytics==8.3.23
+supervision==0.24.0
 -e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers
 -e git+https://github.com/openai/CLIP.git@main#egg=clip
 advertorch@git+https://github.com/BorealisAI/advertorch.git
