--- a/configs/attack/base.yaml
+++ b/configs/attack/base.yaml
@@ -3,8 +3,8 @@ attack:
     steps: 100
     input_size: 512
     mode: sds
-    image_dir: ./images/real/
-    mask_dir: './images/real/masks/'
+    image_dir: /tmp2/SHHQ-1.0_samples/
+    mask_dir: '/tmp2/SHHQ-1.0_samples/masks/'
     output_path: output/
     target_image_path: './images/target/MIST.png'
     alpha: 1
