--- a/configs/attack/base.yaml
+++ b/configs/attack/base.yaml
@@ -3,8 +3,8 @@ attack:
     steps: 100
     input_size: 512
     mode: sds
-    image_dir: ./SHHQ-1.0_samples/
-    mask_dir: './SHHQ-1.0_samples/face_masks/'
+    image_dir: ./images/generated/
+    mask_dir: './images/generated/masks/'
     output_path: output/
     target_image_path: './images/target/MIST.png'
     alpha: 1
